# QRookie

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildMacOs.sh  flake.nix  io.github.glaumar.QRookie.desktop  io.github.glaumar.QRookie.metainfo.xml  io.github.glaumar.QRookie.yml  main.qml  qmlmodules  qrookie.qmlproject  qtquickcontrols2.conf
.github/workflows/: flatpak.yml  macos_bundle_arm64.yml  macos_bundle_x86_64.yml
content/: App.qml  ApplicationDelegate.qml  CMakeLists.txt  Device.qml  DownloadDelegate.qml  Downloads.qml  GameDelegate.qml  Games.qml  LocalDelegate.qml  Users.qml
content/Tabs/Devices/: ApplicationDelegate.qml  Device.qml
content/Tabs/Downloads/: DownloadDelegate.qml  Downloads.qml  LocalDelegate.qml
content/Tabs/Games/: GameDelegate.qml  Games.qml
content/Tabs/Users/: Users.qml  UsersInstalledDelegate.qml  UsersToAddDelegate.qml
content/fonts/: path.sh
dependencies/: macOsInstall.sh
icons/: icon.icns  icon_generator.sh
imports/: CMakeLists.txt
imports/qrookie/: CMakeLists.txt  qmldir
imports/qrookie/designer/: plugin.metainfo
key/: qrookie.keystore
macOs/: Info.plist  buildMacOs.sh  installDependencies.sh  installMacOSNix.sh  packLibraries.sh  projectConfig.sh  signApp.sh
src/: app_info.h  app_settings.cpp  app_settings.h  device_manager.cpp  device_manager.h  game_info.h  game_info_model.cpp  game_info_model.h  http_downloader.cpp  http_downloader.h  import_qml_plugins.h  librclone_wrapper.h  main.cpp  qrookie.h.in  rclone_result.h  resource_locator.cpp  resource_locator.h  vrp_downloader.cpp  vrp_downloader.h  vrp_manager.cpp  vrp_manager.h  vrp_public.cpp  vrp_public.h  vrp_torrent.cpp  vrp_torrent.h
src/models/: game_info_model.h  user.h
third/: build.sh
